src/main/java/eu/reitmayer/texttable/TableQueryParser.java
// $ANTLR 3.4 eu\\reitmayer\\texttable\\TableQuery.g 2020-10-16 17:37:33

package eu.reitmayer.texttable.lang;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class TableQueryParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ALL", "AND", "AS", "BOOL_NOT", "BUT", "COLUMN_LIST", "COLUMN_SPEC", "CONCAT", "DELETE", "DROP", "Digit", "EQUALS", "FALSE", "ID", "INT", "LOWER_CASE", "Letter", "MATCHES", "ML", "NOT", "NUM", "OR", "RANDOM_LIST", "RANDOM_STRING", "REPLACE", "ROW_NUMBER", "SELECT", "SET", "SL", "STRING", "SUB_STRING", "TEXT", "TEXTNUM", "TRUE", "UPDATE", "UPDATE_VAL_ELEM", "UPDATE_VAL_LIST", "UPPER_CASE", "WHERE", "WITH", "WS", "'('", "')'", "','"
    };

    public static final int EOF=-1;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int ADD=4;
    public static final int ALL=5;
    public static final int AND=6;
    public static final int AS=7;
    public static final int BOOL_NOT=8;
    public static final int BUT=9;
    public static final int COLUMN_LIST=10;
    public static final int COLUMN_SPEC=11;
    public static final int CONCAT=12;
    public static final int DELETE=13;
    public static final int DROP=14;
    public static final int Digit=15;
    public static final int EQUALS=16;
    public static final int FALSE=17;
    public static final int ID=18;
    public static final int INT=19;
    public static final int LOWER_CASE=20;
    public static final int Letter=21;
    public static final int MATCHES=22;
    public static final int ML=23;
    public static final int NOT=24;
    public static final int NUM=25;
    public static final int OR=26;
    public static final int RANDOM_LIST=27;
    public static final int RANDOM_STRING=28;
    public static final int REPLACE=29;
    public static final int ROW_NUMBER=30;
    public static final int SELECT=31;
    public static final int SET=32;
    public static final int SL=33;
    public static final int STRING=34;
    public static final int SUB_STRING=35;
    public static final int TEXT=36;
    public static final int TEXTNUM=37;
    public static final int TRUE=38;
    public static final int UPDATE=39;
    public static final int UPDATE_VAL_ELEM=40;
    public static final int UPDATE_VAL_LIST=41;
    public static final int UPPER_CASE=42;
    public static final int WHERE=43;
    public static final int WITH=44;
    public static final int WS=45;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TableQueryParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TableQueryParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return TableQueryParser.tokenNames; }
    public String getGrammarFileName() { return "eu\\reitmayer\\texttable\\TableQuery.g"; }


    public List<RecognitionException> errors = new ArrayList<RecognitionException>();

    public void reportError(RecognitionException e) {
    	super.reportError(e);
    	if (e.token.getType() != EOF)
    	errors.add(e);
    }


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // eu\\reitmayer\\texttable\\TableQuery.g:41:1: statement : ( select_statement | update_statement | delete_statement );
    public final TableQueryParser.statement_return statement() throws RecognitionException {
        TableQueryParser.statement_return retval = new TableQueryParser.statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        TableQueryParser.select_statement_return select_statement1 =null;

        TableQueryParser.update_statement_return update_statement2 =null;

        TableQueryParser.delete_statement_return delete_statement3 =null;



        try {
            // eu\\reitmayer\\texttable\\TableQuery.g:41:10: ( select_statement | update_statement | delete_statement )
            int alt1=3;
            switch ( input.LA(1) ) {
            case SELECT:
                {
                alt1=1;
                }
                break;
            case UPDATE:
                {
                alt1=2;
                }
                break;
            case DELETE:
                {
                alt1=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:42:3: select_statement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_select_statement_in_statement106);
                    select_statement1=select_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, select_statement1.getTree());

                    }
                    break;
                case 2 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:44:3: update_statement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_update_statement_in_statement114);
                    update_statement2=update_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, update_statement2.getTree());

                    }
                    break;
                case 3 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:46:3: delete_statement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_delete_statement_in_statement122);
                    delete_statement3=delete_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, delete_statement3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class select_statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "select_statement"
    // eu\\reitmayer\\texttable\\TableQuery.g:51:1: select_statement : SELECT col_list= column_list ( WHERE bex= bool_expression )? -> ^( SELECT $col_list ( $bex)? ) ;
    public final TableQueryParser.select_statement_return select_statement() throws RecognitionException {
        TableQueryParser.select_statement_return retval = new TableQueryParser.select_statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token SELECT4=null;
        Token WHERE5=null;
        TableQueryParser.column_list_return col_list =null;

        TableQueryParser.bool_expression_return bex =null;


        CommonTree SELECT4_tree=null;
        CommonTree WHERE5_tree=null;
        RewriteRuleTokenStream stream_WHERE=new RewriteRuleTokenStream(adaptor,"token WHERE");
        RewriteRuleTokenStream stream_SELECT=new RewriteRuleTokenStream(adaptor,"token SELECT");
        RewriteRuleSubtreeStream stream_bool_expression=new RewriteRuleSubtreeStream(adaptor,"rule bool_expression");
        RewriteRuleSubtreeStream stream_column_list=new RewriteRuleSubtreeStream(adaptor,"rule column_list");
        try {
            // eu\\reitmayer\\texttable\\TableQuery.g:51:17: ( SELECT col_list= column_list ( WHERE bex= bool_expression )? -> ^( SELECT $col_list ( $bex)? ) )
            // eu\\reitmayer\\texttable\\TableQuery.g:52:2: SELECT col_list= column_list ( WHERE bex= bool_expression )?
            {
            SELECT4=(Token)match(input,SELECT,FOLLOW_SELECT_in_select_statement135);  
            stream_SELECT.add(SELECT4);


            pushFollow(FOLLOW_column_list_in_select_statement139);
            col_list=column_list();

            state._fsp--;

            stream_column_list.add(col_list.getTree());

            // eu\\reitmayer\\texttable\\TableQuery.g:52:30: ( WHERE bex= bool_expression )?
            int alt2=2;
            switch ( input.LA(1) ) {
                case WHERE:
                    {
                    alt2=1;
                    }
                    break;
            }

            switch (alt2) {
                case 1 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:52:31: WHERE bex= bool_expression
                    {
                    WHERE5=(Token)match(input,WHERE,FOLLOW_WHERE_in_select_statement142);  
                    stream_WHERE.add(WHERE5);


                    pushFollow(FOLLOW_bool_expression_in_select_statement146);
                    bex=bool_expression();

                    state._fsp--;

                    stream_bool_expression.add(bex.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: bex, col_list, SELECT
            // token labels: 
            // rule labels: bex, col_list, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_bex=new RewriteRuleSubtreeStream(adaptor,"rule bex",bex!=null?bex.tree:null);
            RewriteRuleSubtreeStream stream_col_list=new RewriteRuleSubtreeStream(adaptor,"rule col_list",col_list!=null?col_list.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 52:59: -> ^( SELECT $col_list ( $bex)? )
            {
                // eu\\reitmayer\\texttable\\TableQuery.g:52:62: ^( SELECT $col_list ( $bex)? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_SELECT.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_col_list.nextTree());

                // eu\\reitmayer\\texttable\\TableQuery.g:52:82: ( $bex)?
                if ( stream_bex.hasNext() ) {
                    adaptor.addChild(root_1, stream_bex.nextTree());

                }
                stream_bex.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "select_statement"


    public static class update_statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "update_statement"
    // eu\\reitmayer\\texttable\\TableQuery.g:55:1: update_statement : UPDATE SET uval= update_value_list ( WHERE b= bool_expression )? -> ^( UPDATE $uval ( $b)? ) ;
    public final TableQueryParser.update_statement_return update_statement() throws RecognitionException {
        TableQueryParser.update_statement_return retval = new TableQueryParser.update_statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token UPDATE6=null;
        Token SET7=null;
        Token WHERE8=null;
        TableQueryParser.update_value_list_return uval =null;

        TableQueryParser.bool_expression_return b =null;


        CommonTree UPDATE6_tree=null;
        CommonTree SET7_tree=null;
        CommonTree WHERE8_tree=null;
        RewriteRuleTokenStream stream_SET=new RewriteRuleTokenStream(adaptor,"token SET");
        RewriteRuleTokenStream stream_UPDATE=new RewriteRuleTokenStream(adaptor,"token UPDATE");
        RewriteRuleTokenStream stream_WHERE=new RewriteRuleTokenStream(adaptor,"token WHERE");
        RewriteRuleSubtreeStream stream_bool_expression=new RewriteRuleSubtreeStream(adaptor,"rule bool_expression");
        RewriteRuleSubtreeStream stream_update_value_list=new RewriteRuleSubtreeStream(adaptor,"rule update_value_list");
        try {
            // eu\\reitmayer\\texttable\\TableQuery.g:55:17: ( UPDATE SET uval= update_value_list ( WHERE b= bool_expression )? -> ^( UPDATE $uval ( $b)? ) )
            // eu\\reitmayer\\texttable\\TableQuery.g:56:2: UPDATE SET uval= update_value_list ( WHERE b= bool_expression )?
            {
            UPDATE6=(Token)match(input,UPDATE,FOLLOW_UPDATE_in_update_statement170);  
            stream_UPDATE.add(UPDATE6);


            SET7=(Token)match(input,SET,FOLLOW_SET_in_update_statement172);  
            stream_SET.add(SET7);


            pushFollow(FOLLOW_update_value_list_in_update_statement176);
            uval=update_value_list();

            state._fsp--;

            stream_update_value_list.add(uval.getTree());

            // eu\\reitmayer\\texttable\\TableQuery.g:56:36: ( WHERE b= bool_expression )?
            int alt3=2;
            switch ( input.LA(1) ) {
                case WHERE:
                    {
                    alt3=1;
                    }
                    break;
            }

            switch (alt3) {
                case 1 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:56:37: WHERE b= bool_expression
                    {
                    WHERE8=(Token)match(input,WHERE,FOLLOW_WHERE_in_update_statement179);  
                    stream_WHERE.add(WHERE8);


                    pushFollow(FOLLOW_bool_expression_in_update_statement183);
                    b=bool_expression();

                    state._fsp--;

                    stream_bool_expression.add(b.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: UPDATE, uval, b
            // token labels: 
            // rule labels: b, uval, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_b=new RewriteRuleSubtreeStream(adaptor,"rule b",b!=null?b.tree:null);
            RewriteRuleSubtreeStream stream_uval=new RewriteRuleSubtreeStream(adaptor,"rule uval",uval!=null?uval.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 56:63: -> ^( UPDATE $uval ( $b)? )
            {
                // eu\\reitmayer\\texttable\\TableQuery.g:56:66: ^( UPDATE $uval ( $b)? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_UPDATE.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_uval.nextTree());

                // eu\\reitmayer\\texttable\\TableQuery.g:56:82: ( $b)?
                if ( stream_b.hasNext() ) {
                    adaptor.addChild(root_1, stream_b.nextTree());

                }
                stream_b.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "update_statement"


    public static class delete_statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "delete_statement"
    // eu\\reitmayer\\texttable\\TableQuery.g:59:1: delete_statement : DELETE WHERE b= bool_expression -> ^( DELETE $b) ;
    public final TableQueryParser.delete_statement_return delete_statement() throws RecognitionException {
        TableQueryParser.delete_statement_return retval = new TableQueryParser.delete_statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token DELETE9=null;
        Token WHERE10=null;
        TableQueryParser.bool_expression_return b =null;


        CommonTree DELETE9_tree=null;
        CommonTree WHERE10_tree=null;
        RewriteRuleTokenStream stream_DELETE=new RewriteRuleTokenStream(adaptor,"token DELETE");
        RewriteRuleTokenStream stream_WHERE=new RewriteRuleTokenStream(adaptor,"token WHERE");
        RewriteRuleSubtreeStream stream_bool_expression=new RewriteRuleSubtreeStream(adaptor,"rule bool_expression");
        try {
            // eu\\reitmayer\\texttable\\TableQuery.g:59:17: ( DELETE WHERE b= bool_expression -> ^( DELETE $b) )
            // eu\\reitmayer\\texttable\\TableQuery.g:60:2: DELETE WHERE b= bool_expression
            {
            DELETE9=(Token)match(input,DELETE,FOLLOW_DELETE_in_delete_statement207);  
            stream_DELETE.add(DELETE9);


            WHERE10=(Token)match(input,WHERE,FOLLOW_WHERE_in_delete_statement209);  
            stream_WHERE.add(WHERE10);


            pushFollow(FOLLOW_bool_expression_in_delete_statement213);
            b=bool_expression();

            state._fsp--;

            stream_bool_expression.add(b.getTree());

            // AST REWRITE
            // elements: b, DELETE
            // token labels: 
            // rule labels: b, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_b=new RewriteRuleSubtreeStream(adaptor,"rule b",b!=null?b.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 60:33: -> ^( DELETE $b)
            {
                // eu\\reitmayer\\texttable\\TableQuery.g:60:36: ^( DELETE $b)
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_DELETE.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_b.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "delete_statement"


    public static class column_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "column_list"
    // eu\\reitmayer\\texttable\\TableQuery.g:69:1: column_list : (cspec+= column_spec ( ',' cspec+= column_spec )* -> ^( COLUMN_LIST ( $cspec)+ ) | ALL -> ^( COLUMN_LIST ALL ) );
    public final TableQueryParser.column_list_return column_list() throws RecognitionException {
        TableQueryParser.column_list_return retval = new TableQueryParser.column_list_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal11=null;
        Token ALL12=null;
        List list_cspec=null;
        RuleReturnScope cspec = null;
        CommonTree char_literal11_tree=null;
        CommonTree ALL12_tree=null;
        RewriteRuleTokenStream stream_ALL=new RewriteRuleTokenStream(adaptor,"token ALL");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleSubtreeStream stream_column_spec=new RewriteRuleSubtreeStream(adaptor,"rule column_spec");
        try {
            // eu\\reitmayer\\texttable\\TableQuery.g:69:12: (cspec+= column_spec ( ',' cspec+= column_spec )* -> ^( COLUMN_LIST ( $cspec)+ ) | ALL -> ^( COLUMN_LIST ALL ) )
            int alt5=2;
            switch ( input.LA(1) ) {
            case ID:
            case LOWER_CASE:
            case RANDOM_LIST:
            case RANDOM_STRING:
            case REPLACE:
            case ROW_NUMBER:
            case STRING:
            case SUB_STRING:
            case UPPER_CASE:
                {
                alt5=1;
                }
                break;
            case ALL:
                {
                alt5=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:70:2: cspec+= column_spec ( ',' cspec+= column_spec )*
                    {
                    pushFollow(FOLLOW_column_spec_in_column_list239);
                    cspec=column_spec();

                    state._fsp--;

                    stream_column_spec.add(cspec.getTree());
                    if (list_cspec==null) list_cspec=new ArrayList();
                    list_cspec.add(cspec.getTree());


                    // eu\\reitmayer\\texttable\\TableQuery.g:70:21: ( ',' cspec+= column_spec )*
                    loop4:
                    do {
                        int alt4=2;
                        switch ( input.LA(1) ) {
                        case 48:
                            {
                            alt4=1;
                            }
                            break;

                        }

                        switch (alt4) {
                    	case 1 :
                    	    // eu\\reitmayer\\texttable\\TableQuery.g:70:22: ',' cspec+= column_spec
                    	    {
                    	    char_literal11=(Token)match(input,48,FOLLOW_48_in_column_list242);  
                    	    stream_48.add(char_literal11);


                    	    pushFollow(FOLLOW_column_spec_in_column_list246);
                    	    cspec=column_spec();

                    	    state._fsp--;

                    	    stream_column_spec.add(cspec.getTree());
                    	    if (list_cspec==null) list_cspec=new ArrayList();
                    	    list_cspec.add(cspec.getTree());


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    // AST REWRITE
                    // elements: cspec
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: cspec
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
                    RewriteRuleSubtreeStream stream_cspec=new RewriteRuleSubtreeStream(adaptor,"token cspec",list_cspec);
                    root_0 = (CommonTree)adaptor.nil();
                    // 70:47: -> ^( COLUMN_LIST ( $cspec)+ )
                    {
                        // eu\\reitmayer\\texttable\\TableQuery.g:70:50: ^( COLUMN_LIST ( $cspec)+ )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(COLUMN_LIST, "COLUMN_LIST")
                        , root_1);

                        if ( !(stream_cspec.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_cspec.hasNext() ) {
                            adaptor.addChild(root_1, stream_cspec.nextTree());

                        }
                        stream_cspec.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:72:2: ALL
                    {
                    ALL12=(Token)match(input,ALL,FOLLOW_ALL_in_column_list264);  
                    stream_ALL.add(ALL12);


                    // AST REWRITE
                    // elements: ALL
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 72:6: -> ^( COLUMN_LIST ALL )
                    {
                        // eu\\reitmayer\\texttable\\TableQuery.g:72:9: ^( COLUMN_LIST ALL )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(COLUMN_LIST, "COLUMN_LIST")
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_ALL.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "column_list"


    public static class column_spec_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "column_spec"
    // eu\\reitmayer\\texttable\\TableQuery.g:85:1: column_spec : sexp= string_expression ( AS alias= ID )? -> ^( COLUMN_SPEC $sexp ( $alias)? ) ;
    public final TableQueryParser.column_spec_return column_spec() throws RecognitionException {
        TableQueryParser.column_spec_return retval = new TableQueryParser.column_spec_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token alias=null;
        Token AS13=null;
        TableQueryParser.string_expression_return sexp =null;


        CommonTree alias_tree=null;
        CommonTree AS13_tree=null;
        RewriteRuleTokenStream stream_AS=new RewriteRuleTokenStream(adaptor,"token AS");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_string_expression=new RewriteRuleSubtreeStream(adaptor,"rule string_expression");
        try {
            // eu\\reitmayer\\texttable\\TableQuery.g:85:12: (sexp= string_expression ( AS alias= ID )? -> ^( COLUMN_SPEC $sexp ( $alias)? ) )
            // eu\\reitmayer\\texttable\\TableQuery.g:86:2: sexp= string_expression ( AS alias= ID )?
            {
            pushFollow(FOLLOW_string_expression_in_column_spec297);
            sexp=string_expression();

            state._fsp--;

            stream_string_expression.add(sexp.getTree());

            // eu\\reitmayer\\texttable\\TableQuery.g:86:26: ( AS alias= ID )?
            int alt6=2;
            switch ( input.LA(1) ) {
                case AS:
                    {
                    alt6=1;
                    }
                    break;
            }

            switch (alt6) {
                case 1 :
                    // eu\\reitmayer\\texttable\\TableQuery.g:86:27: AS alias= ID
                    {
                    AS13=(Token)match(input,AS,FOLLOW_AS_in_column_spec300);  
                    stream_AS.add(AS13);


                    alias=(Token)match(input,ID,FOLLOW_ID_in_column_spec304);  
                    stream_ID.add(alias);


                    }
                    break;

            }

